Fixed the hamburger menu on tablet

--- a/src/mobilecss/navbar.css
+++ b/src/mobilecss/navbar.css
@@ -101,3 +101,17 @@
     display: none;
   }
 }
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .link-style {
+    font-size: 50px;
+
+  }
+
+  .phone-menu-item {
+    margin-top: 30px;
+  }
+
+
+}
